@@ -285,10 +285,13 @@ work closely with the C<autodie::exception> model.
 #        get used in most programs.
 
 my %formatter_of = (
-    'CORE::close'   => \&_format_close,
-    'CORE::open'    => \&_format_open,
-    'CORE::dbmopen' => \&_format_dbmopen,
-    'CORE::flock'   => \&_format_flock,
+    'CORE::close'    => \&_format_close,
+    'CORE::open'     => \&_format_open,
+    'CORE::dbmopen'  => \&_format_dbmopen,
+    'CORE::flock'    => \&_format_flock,
+    'CORE::read'     => \&_format_readwrite,
+    'CORE::sysread'  => \&_format_readwrite,
+    'CORE::syswrite' => \&_format_readwrite,
 );
 
 # TODO: Our tests only check LOCK_EX | LOCK_NB is properly
@@ -388,6 +391,41 @@ sub _format_close {
     # TODO - This will probably produce an ugly error.  Test and fix.
     return "Can't close($close_arg) filehandle: '$!'";
 
+}
+
+# Default formatter for CORE::read, CORE::sysread and CORE::syswrite
+#
+# Similar to default formatter with the buffer filtered out as it
+# may contain binary data.
+sub _format_readwrite {
+    my ($this) = @_;
+    my $call = $this->function;
+    local $! = $this->errno;
+
+    # Trim package name off dying sub for error messages.
+    $call =~ s/.*:://;
+
+    # These subs receive the following arguments (in order):
+    #
+    # * FILEHANDLE
+    # * SCALAR (buffer, we do not want to write this)
+    # * LENGTH (optional for syswrite)
+    # * OFFSET (optional for all)
+    my (@args) = @{$this->args};
+    my $arg_name = $args[1];
+    if (defined($arg_name)) {
+        if (ref($arg_name)) {
+            my $name = blessed($arg_name) || ref($arg_name);
+            $arg_name = "<${name}>";
+        } else {
+            $arg_name = '<BUFFER>';
+        }
+    } else {
+        $arg_name = '<UNDEF>';
+    }
+    $args[1] = $arg_name;
+
+    return "Can't $call(" . join(q{, }, @args) . "): $!";
 }
 
 # Default formatter for CORE::open
